# hmwrk-1-23_12_19

./: .gitignore  .travis.yml  CMakeLists.txt
app/: CMakeLists.txt  app.cpp
conf/: .travis.yml.in
lib/version/: CMakeLists.txt
tests/boost/: CMakeLists.txt
tests/gtest/: CMakeLists.txt  gtests.cpp
